<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Чупиков В.С.</string>
    <string name="hint_phone">Мобильный телефон</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_github">Репозиторий</string>
    <string name="hint_vk">Профиль в vk</string>
    <string name="hint_about">О себе</string>
    <string name="hint_password">Пароль</string>
    <string name="text_phone">+7 909 215-84-11</string>
    <string name="text_email">me@venchu.com</string>
    <string name="text_github">github.com/venchu</string>
    <string name="text_vk">vk.com/okayanni</string>
    <string name="text_about">Небольшой текст о себе, который должен здесь быть.</string>
    <string name="user_profile.placeholder.image">Изменить фотографию профиля</string>
    <string name="user_profile.dialog.gallery">Загрузить из галереи</string>
    <string name="user_profile.dialog.camera">Сделать снимок</string>
    <string name="user_profile.dialog.cancel">Отмена</string>
    <string name="user_profile.dialog.title">Изменить фотографию профиля</string>
    <string name="user_profile.choose.message">выберите фото</string>
    <string name="exit_menu">Выход</string>
    <string name="error_format_phone">Неизвестный формат. Необходимо: x xxx xxx-xx-xx</string>
    <string name="error_format_email">Неизвестный формат. Необходимо: xxx@xxx.xx</string>
    <string name="error_format_path_vk">Неизвестный формат. Необходимо: vk.com/xxxxx</string>
    <string name="error_format_path_github">Неизвестный формат. Необходимо: github.com/xxxxx</string>
    <string name="login">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="ff_medium">sans-serif-medium</string>
    <string name="ff_regular">sans-serif-regular</string>
</resources>
