<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              tools:context=".ui.activities.MainActivity"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
        <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/spacing_medial_24"
                android:paddingTop="@dimen/spacing_medial_24">

                <LinearLayout
                    style="@style/textblock">

                    <TextView
                        style="@style/tex.name"
                        android:text="2"/>

                    <TextView
                        style="@style/tex"
                        android:text="Рейтинг"/>
                </LinearLayout>

                <View
                    android:layout_width="@dimen/line_size"
                    android:layout_height="@dimen/h_line"
                    android:background="@color/grey_light"/>

                <LinearLayout
                    style="@style/textblock">

                    <TextView
                        style="@style/tex.name"
                        android:text="150"/>

                    <TextView
                        style="@style/tex"
                        android:text="Написано строк кода"/>
                </LinearLayout>

                <View
                    android:layout_width="@dimen/line_size"
                    android:layout_height="@dimen/h_line"
                    android:background="@color/grey_light"/>

                <LinearLayout
                    style="@style/textblock">

                    <TextView
                        style="@style/tex.name"
                        android:text="3"/>

                    <TextView
                        style="@style/tex"
                        android:text="Проектов"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small_8"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_call_black_24dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_large_72"
                    android:layout_marginLeft="@dimen/left_m_margin_32"
                    android:layout_marginRight="@dimen/right_s_margin_16"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/ed"
                            android:hint="@string/hint_phone"
                            android:inputType="phone"
                            android:text="@string/text_phone"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_phone_in_talk_black_24dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_size"
                android:layout_marginLeft="@dimen/left_l_margin_72"
                android:background="@color/grey_light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small_8"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_email_black_24dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_large_72"
                    android:layout_marginLeft="@dimen/left_m_margin_32"
                    android:layout_marginRight="@dimen/right_s_margin_16"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/ed"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:text="@string/text_email"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_send_black_24dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_size"
                android:layout_marginLeft="@dimen/left_l_margin_72"
                android:background="@color/grey_light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small_8"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/vk-circle"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_large_72"
                    android:layout_marginLeft="@dimen/left_m_margin_32"
                    android:layout_marginRight="@dimen/right_s_margin_16"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/ed"
                            android:hint="@string/hint_vk"
                            android:inputType="textMultiLine"
                            android:text="@string/text_vk"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_visibility_black_24dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_size"
                android:layout_marginLeft="@dimen/left_l_margin_72"
                android:background="@color/grey_light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small_8"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_github_circle"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_m_margin_32"
                    android:layout_marginRight="@dimen/right_s_margin_16"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/ed"
                            android:hint="@string/hint_github"
                            android:inputType="textMultiLine"
                            android:text="@string/text_github"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_visibility_black_24dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_size"
                android:layout_marginLeft="@dimen/left_l_margin_72"
                android:background="@color/grey_light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small_8"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_account_circle_black_24px"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_m_margin_32"
                    android:layout_marginRight="@dimen/right_s_margin_16"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/ed"
                            android:hint="@string/hint_about"
                            android:text="@string/text_about"
                            android:inputType="textMultiLine"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
