<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_small_8"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.softdesign.devintensive.ui.views.AspectRatioImageView
                android:id="@+id/user_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/user_bg"
                app:aspect_ratio="1.78"/>

            <TextView
                android:id="@+id/user_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/ff_medium"
                android:paddingBottom="@dimen/left_s_margin_16"
                android:paddingLeft="@dimen/left_s_margin_16"
                android:paddingRight="@dimen/left_s_margin_16"
                android:textColor="@color/white"
                android:textSize="@dimen/font_large_24"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/left_l_margin_72"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/left_s_margin_16"
            android:paddingRight="@dimen/left_s_margin_16">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/ff_medium"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_medium_20"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/ff_regular"
                    android:text="Рейтинг"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_medium_20"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/codelines"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/ff_medium"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_medium_20"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/ff_regular"
                    android:text="Строк кода"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_medium_20"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/projects"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/ff_medium"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_medium_20"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/ff_regular"
                    android:text="Проектов"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_medium_20"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/edit_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/ff_regular"
            android:maxLines="3"
            android:paddingLeft="@dimen/left_s_margin_16"
            android:paddingRight="@dimen/left_s_margin_16"
            android:text="@string/text_about"
        07:21:08
        android:textColor="@color/grey_light"
        android:textSize="@dimen/font_small_14"/>

        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/spacing_small_8"
            android:layout_marginTop="@dimen/left_s_margin_16"
            android:background="@color/grey_light"/>

        <Button
            android:id="@+id/more_info_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/left_s_margin_16"
            android:paddingRight="@dimen/left_s_margin_16"
            android:text="Просмотр"
            android:textColor="@color/color_accent"/>

    </LinearLayout>
</android.support.v7.widget.CardView>